k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-boilerplate
  labels:
    name: fastapi-boilerplate
    environment: development
